Fix layout issues with controls panel

--- a/_css/style.css
+++ b/_css/style.css
@@ -57,7 +57,7 @@ canvas{
 	top: 0px;
 	right: 0px;
 	bottom: 0px;
-	width: 370px;
+	width: 390px;
 	box-sizing: border-box;
 	border-left: 1px #000000 solid;
 	background-color: #F6F8FF;
